--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: objective-c
 osx_image: xcode8.2
 script: fastlane test
+addons:
+  artifacts:
+    paths:
+      - $(git ls-files -o fastlane | tr "\n" ":")
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t 5213f787-a183-4804-8284-bcd7e79b0f7b
