Travis setting to improve coverage report processing

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - fastlane setup
 script: fastlane test
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -t 5213f787-a183-4804-8284-bcd7e79b0f7b
+  - bash <(curl -s https://codecov.io/bash) -t 5213f787-a183-4804-8284-bcd7e79b0f7b -J 'Monumap'
