Added annotation cluster + visible monument filtering + local monuments list

--- a/Monumap.xcodeproj/xcshareddata/xcschemes/Monumap.xcscheme
+++ b/Monumap.xcodeproj/xcshareddata/xcschemes/Monumap.xcscheme
@@ -28,7 +28,7 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5EC079DFE2E0C602C6BF6D5BB75C7549"
+               BlueprintIdentifier = "6315BAEFFCA902EDD2203A34DACAEA7C"
                BuildableName = "RxCocoa.framework"
                BlueprintName = "RxCocoa"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
@@ -129,6 +129,34 @@
                BlueprintIdentifier = "EFDB85DF4827734B35E8A46720ACAEE0"
                BuildableName = "Result.framework"
                BlueprintName = "Result"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DC6D72C4F604D7B6D1A2FC7F1CEDDC08"
+               BuildableName = "CCHMapClusterController.framework"
+               BlueprintName = "CCHMapClusterController"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "95032CEAE21D25EC4A669F98AC755E99"
+               BuildableName = "SwiftyJSON.framework"
+               BlueprintName = "SwiftyJSON"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
